force-app/main/default/objects/RE_Rate_Unit_Manager__c/RE_Rate_Unit_Manager__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RE Rate Unit Manager</label>
</CustomObject>