force-app/main/default/objects/RE_Rate_Unit_Manager__c/fields/RE_Currency_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_Currency_Unit__c</fullName>
    <label>Currency Unit</label>
    <length>30</length>
    <type>Text</type>
</CustomField>