force-app/main/default/objects/RE_Rate_Unit_Manager__c/fields/RE_Rate_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_Rate_Unit__c</fullName>
    <label>Rate Unit</label>
    <length>12</length>
    <type>Text</type>
</CustomField>