force-app/main/default/objects/RE_Rate_Unit_Manager__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>RE_Rate_Unit__c</columns>
    <columns>RE_Currency_Unit__c</columns>
    <columns>RE_Volume_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>